--- a/public/css/_largedesktops.scss
+++ b/public/css/_largedesktops.scss
@@ -1,3 +1,8 @@
 /**
  * Less file for large desktops
  */
+#story{
+    background-image: url('../img/MockUp.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
